# bzip2_decomp

./: .gitignore  Development.md  README.md  checksum-Elixir.Bzip2.exs  mix.exs
.github/workflows/: release.yml
lib/: bzip2_decomp.ex
native/bzip2_decomp/: Cargo.toml  Cross.toml  README.md
native/bzip2_decomp/.cargo/: config.toml
native/bzip2_decomp/src/: lib.rs
test/: bzip2_decomp_test.exs  readme_test.exs
test/examples/: hello_ground.bz2  hello_ground.txt
